<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailDrinkActivity">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="@dimen/icon_medium"
        android:layout_height="@dimen/icon_medium"
        android:src="@drawable/icon_back"
        android:layout_marginStart="@dimen/margin_edge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button"
        android:layout_marginLeft="@dimen/margin_edge"
        android:layout_marginTop="@dimen/margin_top_button"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_edge"
        android:layout_marginEnd="@dimen/margin_edge"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icon_favorite_outlined"
        tools:ignore="VectorDrawableCompat"
        android:layout_marginRight="@dimen/margin_edge"
        android:contentDescription="@string/favorite_button" />

    <ImageView
        android:id="@+id/iv_detail_image"
        android:layout_width="@dimen/image_detail_size"
        android:layout_height="@dimen/image_detail_size"
        android:layout_marginTop="@dimen/margin_top_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_favorite"
        android:src="@drawable/icon_image"
        android:contentDescription="@string/cocktail_image" />

    <TextView
        android:id="@+id/name_cocktail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_edge"
        android:textAllCaps="true"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        android:text="@string/name_cocktail"/>

    <TextView
        android:id="@+id/text_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name_cocktail"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/how_to_make"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/margin_edge"
        android:layout_marginLeft="@dimen/margin_edge"
        android:layout_marginTop="@dimen/margin_edge"/>

    <TextView
        android:id="@+id/content_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_edge"
        android:layout_marginLeft="@dimen/margin_edge"
        android:layout_marginTop="@dimen/margin_edge"
        android:layout_marginEnd="@dimen/margin_edge"
        android:text="@string/instructions"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:indeterminateTint="@color/red_200"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>